--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "allons-y-community": "^1.0.6",
+    "async": "^2.1.2",
     "fs-extra": "^1.0.0",
     "passport": "^0.3.2",
     "passport-saml": "^0.15.0"
